# aircraft-3dof-flight-simulation

./: .gitignore  CLAUDE.md  Information.md  README.md  pyproject.toml  run_scenario_a.py  run_scenario_b.py  run_scenario_c.py  run_scenario_d.py
.github/workflows/: ci.yml
aircraft_3dof/: __init__.py  aerodynamics.py  aircraft.py  animation.py  atmosphere.py  controls.py  dynamics.py  propulsion.py  simulation.py
tests/: test_aerodynamics.py  test_animation.py  test_atmosphere.py  test_controls.py  test_propulsion.py  test_simulation.py
