[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aircraft-3dof"
version = "1.0.0"
description = "A Master-level educational 3-Degrees-of-Freedom Point-Mass Jet Aircraft Simulation Model."
readme = "README.md"
authors = [
    { name = "DeepMind AAC / Antigravity" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aircraft_3dof*"]
